fix search on safari

--- a/src/ui/search/search.module.scss
+++ b/src/ui/search/search.module.scss
@@ -24,6 +24,7 @@
     }
 
     .kui-input__item {
+        -webkit-appearance: textfield;
         padding-left: $google-spacing * 6;
     }
 }
